# script-reader

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  alice.npc  main.cpp
src/: readscriptfile.cpp  readscriptfile.h  scriptfile.cpp  scriptfile.h  scripttoken.cpp  scripttoken.h  streambuffer.h
src/scriptreader/: CMakeLists.txt  readscriptfile.cpp  readscriptfile.h  scriptfile.cpp  scriptfile.h  scripttoken.cpp  scripttoken.h  streambuffer.h
